src/tests/testfiles/function-declarations/16.txt
testfiles/function-declarations/16.c:1:14: error: ‘void’ must be the only parameter
int iojiofej(void, void a) {
             ^
testfiles/function-declarations/16.c:1:20: error: parameter 'a' has incomplete type
int iojiofej(void, void a) {
                   ^
